...
                        </Link>

                        <View className="flex-row items-center gap-4">

                            <Pressable
                                accessibilityRole="button"
                                accessibilityLabel="Toggle account menu"
                                className="rounded-full p-2"
                                onPress={() => setMobileAccountMenuOpen(!mobileAccountMenuOpen)}
                            >
                                <IonIcons
                                    name="person-outline"
                                    size={30}
...
                    ) : null}
                </View>
                {mobileAccountMenuOpen ? (
                    <View testID="mobile-account-menu" className="absolute right-5 top-20 w-48 rounded-[28px] border border-gray-200 bg-white px-6 py-6 shadow-lg sm:hidden z-[999]">
                        <Link href="/login" asChild>
                            <Pressable
                                testID='mobileLoginButton'
                                onPress={() => {
                                    setMobileAccountMenuOpen(false);
                                    router.push('/login');
                                }}
                                className="flex-row items-center gap-3 rounded-[20px] p-3 active:bg-red-400"
                            >
...
