appId: com.anonymous.helphubwebapp
---

- launchApp:
    clearState: true

- runFlow:
    label: "Check app is running"
    commands:
        - assertVisible: "HelpHub"
        - assertVisible: "Search..."

- runFlow:
    label: "Navigate To Login"
    commands:
      - tapOn: "Toggle account menu"
      - tapOn:
          id: "mobileLoginButton"



- runFlow:
    label: "Invalid Login Attempt"
    commands:
      - tapOn:
          id: "login-email-input"

      - inputText: "Ahmed123@gmail.com"

      - hideKeyboard

      - tapOn:
          id: "login-password-input"

      - inputText: "1234567"

      - hideKeyboard

      - tapOn:
          id: "login-button"

      - assertVisible: "Invalid password/email"

- runFlow:
    label: "Successful Login Attempt"
    commands:
      - tapOn: "Write your password"
      - eraseText
      - inputText: "123456"
      - hideKeyboard

      - tapOn:
          id: "login-button"

      - assertVisible: "Login successful. Redirecting..."